--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     </div>
     <div class="socials">
         <div class="social-box">
-            <a href="#" class="item">
+            <a href="https://www.instagram.com/eureka.vitb/" class="item">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a href="#" class="item">
+            <a href="https://github.com/Eureka-VitB" class="item">
                 <i class="fab fa-github"></i>
             </a>
-            <a href="#" class="item">
+            <a href="https://www.linkedin.com/company/theeurekaclub/" class="item">
                 <i class="fab fa-linkedin"></i>
             </a>
         </div>
