--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 </div>
             </div>
             <div class="terminal-content" id="terminal">
-                <p>Eureka$ <span>Type the Keyword</span></p>
-                <p>Eureka$ <span class="input" contenteditable="true"></span></p>
+                <p>(Vit㉿Eureka)-[~] $ <span>Type the Keyword</span></p>
+                <p>(Vit㉿Eureka)-[~] $ <span class="input" contenteditable="true"></span></p>
             </div>
         </div>
     </div>
